--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4999,6 +4999,8 @@ ROM_further_land_reform_desc:0 "The Romanian people expect further land reform f
 ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
 ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
 ROM_fixing_the_railways:0 "Fixing the Railways"
+ROM_the_conservative_conservatives:0 "The Conservative in the Conservative Party"
+ROM_the_conservative_conservatives_desc:0 "The PC has started to lose its way as of late. What was originally simply a conservative party has been morphed into a mess of contradictionary left and right wing positions on various issues, with little coherence. Luckily, the appointment of Delavrancea has given us a chance to make the conservative party conservative again."
 ROM_fixing_the_railways_desc:0 ""
 ROM_develop_the_north:0 "The Forgotten Half of the Country"
 ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, while the north has fallen behind. We cannot ignore the needs of the people up north, and we should invest in the infrastructure up there."
