--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9393,10 +9393,28 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  eng_news.21.b: "Is that... What's Churchill doing there?!"
  eng_news.21.c: "Apparently one of those bastards fled and joined the Bolsheviks..."
 
- #INDIA RAJ
- ww1_raj.2.t:0 "Demarcation line in Arunachal Pradesh"
- ww1_raj.2.d:0 "Due to the recent revolutions and general turmoil in China, Tibet declared independence. To ensure border control in a remote region, it was decided to send a military expedition to Arunachal Pradesh and establish a border demarcation line."
- ww1_raj.2.a:0 "Ok."
+ #INDIA/RAJ
+
+ # Flavor #
+ 
+ # 1911
+ ww1_flavor_raj.1.t:0 "First Official Airmail Flight in the World"
+ ww1_flavor_raj.1.d:0 "Today, 23-year-old Frenchman ''Henri Pequet'' flew from the Allahabad polo field to Naini for an air show to deliver 6,500 letters. He flew a Humber-Sommer biplane with about fifty horsepower (37 kW) and made the 10 kilometre journey in about thirteen minutes. The letters were marked ''First Aerial Post, U.P. Exhibition Allahabad 1911''."
+ ww1_flavor_raj.1.a:0 "The final frontier."
+
+ ww1_flavor_raj.2.t:0 "First Indian Team to Defeat Foreign Team"
+ ww1_flavor_raj.2.d:0 "Mohun Bagan played their first match in 1889 against Eden Hindu Hostel and won their first title in 1904 when they lifted the Cooch Behar Cup. Today, Mohun Bagan became the first Indian club to win a major title when they beat East Yorkshire Regiment 2-1 to lift the IFA Shield. Only time will tell if they can maintain this momentum."
+ ww1_flavor_raj.2.a:0 "I hope they do!"
+
+ ww1_flavor_raj.3.t:0 "Diocese of Kottayam Erected"
+ ww1_flavor_raj.3.d:0 "In a historic move to better serve the unique spiritual and cultural needs of the Knanaya Catholic community, the Vatican has officially established the Diocese of Kottayam. The creation of this diocese is in response to long-standing appeals by the Knanaya Catholics, who have distinct traditions and a rich heritage dating back to their migration from the Middle East in the 4th century, to have a dedicated ecclesiastical jurisdiction to cater specifically to their unique liturgical, cultural and social practices.\n\nThe newly appointed Bishop, Mar Mathew Makil, who previously served as Vicar Apostolic of Changanassery, will lead the Diocese of Kottayam. Bishop Makil is known for his deep understanding of the needs of the Knanaya community and his commitment to fostering their spiritual growth. His appointment has been met with widespread approval and enthusiasm among the local clergy and laity."
+ ww1_flavor_raj.3.a:0 "God bless them."
+
+ ww1_flavor_raj.4.t:0 "Bharoto Bhagyo Bidhata"
+ ww1_flavor_raj.4.d:0 "Bharoto Bhagyo Bidhata, ''dispenser of India's destiny'', is a five stanza Brahmo poem in Bengali written by Rabindranath Tagore. It was sung for the first time today on the second day of the annual session of the Indian National Congress in Kolkata. The poem was performed by Sarala Devi Chowdhurani, Tagore's niece, along with a group of school children in front of prominent Congress leaders including Bishan Narayan Dhar, president of the Indian National Congress, and Ambika Charan Majumdar."
+ ww1_flavor_raj.4.a:0 "Beautiful."
+
+ # Focus #
 
  ww1_raj.1.t:0 "The Earl of Minto Resigns."
  ww1_raj.1.d:0 "Gilbert Elliot-Murray-Kynynmound, 4th Earl of Minto retires, following in the footsteps of his great-grandfather, the first Lord Minto.\n\nWhen John Morley as Secretary of State for India wrote to Minto arguing that "Reforms may not save the Raj, but if they don't, nothing else will", Minto replied: When you say that "if reforms do not save the Raj nothing else will" I am afraid I must utterly disagree. The Raj will not disappear in India as long as the British race remains what it is, because we shall fight for the Raj as hard as we have ever fought, if it comes to fighting, and we shall win as we have always won.\n\nThe reforms were called usually by the name "Morley-Minto Reforms" because both John Morley and Lord Minto worked together to draw these reforms. They were passed by the British parliament in 1909 as the Indian Councils Act.\n\nHe will be succeeded by Lord Hardinge of Penshurst."
@@ -9491,10 +9509,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.22.t:0 "Second Hearing of the Howrah-Sibpur Conspiracy Case"
  ww1_raj.22.d:0 "PLACEHOLDER"
  ww1_raj.22.a:0 "Let's hope they've learned their lesson."
-
- ww1_raj.23.t:0 "Bharoto Bhagyo Bidhata"
- ww1_raj.23.d:0 "PLACEHOLDER"
- ww1_raj.23.a:0 "Beautiful."
 
  ww1_raj.24.t:0 "Malankara Orthodox-Jacobite Church Dispute"
  ww1_raj.24.d:0 "A schism within the Malankara Syrian Church has led to an ongoing series of ecclesiastical disputes in Kerala, India. The dispute, now known by various names (Malankara Orthodox-Jacobite Church Dispute, the Schism of 1912, the Second Community Case or even the Second Vattippana Case), has been intertwined with continuous litigation and has resulted in the formation of two rival ecclesiastical bodies, namely the autocephalous Malankara Orthodox Syrian Church and the Malankara Jacobite Syrian Orthodox Church, an autonomous church under the Syriac Orthodox Patriarchate of Antioch."
