--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4989,12 +4989,16 @@ kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints th
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
 kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
 ROM_a_moral_romania:0 "Revive Trust in the Government"
+ROM_research_investments:0 "Rural Research Investments"
 ROM_a_moral_romania.tt:0 "For every §Y8.00%§! §3Democratic§! support, this focus will give us:\nGain Base Stability: §G+1.50%§!.\nPolitical Power: §G+5§!.\n\nBecause of our current §3Democratic§! support, this focus will give:"
 ROM_a_moral_romania_desc:0 "The past few corrupt administrations - both containing the PNL and the PC, have greatly lowered the faith of the people in Romanias government. We must strive to restore the Romanian peoples confidence in our government."
 no_happy_few:0 "Didn't accept Carols request to not undo land reform"
 ROM_we_happy_few:0 "We Happy Few"
 ROM_we_happy_few_desc:0 "Is it not the landlords who make up some of the richest in Romania? Angering them further won't do us any good, and we should instead reach out to landlords and offer them some input on our future domestic legislation"
 ROM_further_land_reform:0 "Tackling the Land Reform Issue"
+arm_twister:0 "Arm Twister"
+ROM_undemocratic_methods:0 "Undemocratic Methods for a Democratic Policy"
+ROM_undemocratic_methods_desc:0 "The PNL is a somewhat divided party, with factions who support and oppose different levels of liberal reform. We really cannot waste our time and political capital on getting everyone onboard with the plan, and thus we must make use of loopholes to pass some of our agenda. The ends will justify the means in this case."
 ROM_further_land_reform_desc:0 "The Romanian people expect further land reform from us. We must deliver, and thus will reach out to all sides of the political isle to come up with a moderate bill everyone can agree upon."
 ROM_sa_faci_din_rahat_bici:0 "Sa Faci Din Rahat Bici"
 ROM_sa_faci_din_rahat_bici_desc:0 "We don't have the steel of Germany or the vast population of Russia, but our economy still has the foundations for modernization. Welcoming the advice of industrial experts from foreign countries will help us speed up the growth of our small, but important industrial sector."
