--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4997,6 +4997,7 @@ ROM_we_happy_few:0 "We Happy Few"
 ROM_we_happy_few_desc:0 "Is it not the landlords who make up some of the richest in Romania? Angering them further won't do us any good, and we should instead reach out to landlords and offer them some input on our future domestic legislation"
 ROM_further_land_reform:0 "Tackling the Land Reform Issue"
 arm_twister:0 "Arm Twister"
+ROM_liberal_government:0 "the §lPNL§! is in power"
 ROM_undemocratic_methods:0 "Undemocratic Methods for a Democratic Policy"
 ROM_undemocratic_methods_desc:0 "The PNL is a somewhat divided party, with factions who support and oppose different levels of liberal reform. We really cannot waste our time and political capital on getting everyone onboard with the plan, and thus we must make use of loopholes to pass some of our agenda. The ends will justify the means in this case."
 ROM_further_land_reform_desc:0 "The Romanian people expect further land reform from us. We must deliver, and thus will reach out to all sides of the political isle to come up with a moderate bill everyone can agree upon."
@@ -5094,7 +5095,7 @@ ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL
 ww1_romania.20.a:0 "The pro Carp faction wins!"
 ww1_romania.20.b:0 "The 'Romanian Young-Turks' win!"
 ww1_romania.18.t:0 "King Appoints New Government"
-ROM_conservative_government:0 "Conservatives are in Power"
+ROM_conservative_government:0 "The §cPC§! are in Power"
 ww1_romania.17.t:0 "PC Majority Elected!"
 ww1_romania.17.d:0 "The recently announced Romanian elections have came to an end. With the votes being counted up, the PC has been announced the winner of the elections, securing a quite large electoral landslide. With this, we will finally have the mandate to pass out agenda. The Romanian people still expect reforms to continue, so we must be careful in our leadership. Failing to govern properly could lead to King Carol outright dismissing us!"
 ww1_romania.17.a:0 "Finally! Let's get to governing"
