--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4985,6 +4985,10 @@ ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been fille
 pot_tt:0 "When this focus is selected:\nGets event '§YShutting Down the Tramcar Society§!'\nWe will attempt to take down several pro §lPNL§! organizations, on charges of corruption. We should be prepared to face §Rsignificant§! opposition to these actions!"
 ROM_re_assure_liberals:0  "Reassure The Liberals"
 ROM_re_assure_liberals_desc:0 "Many liberals in Romania have been worried by the kings new government. They fear a reversion of Romanias democracy, and the king replacing said democracy with a dictatorship. These rumors are absolutely false. This government is not a thin veiled shadow for the king, and the king is still committed to Romanian democracy."
+ROM_restore_christianity_to_romania:0 "Restore Christianity to Romania"
+ROM_restore_christianity_to_romania_desc:0 ""
+ROM_blurry_the_lines_between_church_and_state:0 "Blur the Lines between Church and State"
+ROM_blurry_the_lines_between_church_and_state_desc:0 ""
 kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints the §mPCD§! to form a government"
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
 kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
@@ -5027,8 +5031,6 @@ ROM_import_foreign_tools:0 "Import Foreign Tools"
 ROM_import_foreign_tools_desc:0 ""
 ROM_towards_an_industrial_economy:0 "Towards an Industrial Economy"
 ROM_towards_an_industrial_economy_desc:0 ""
-ROM_romanian_army:0 "The Romanian Army"
-ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
 ROM_his_majestys_influence:0 "His Majesty's Influence"
 ROM_his_majestys_influence_desc:0 ""
 ROM_crush_left_wing_protesters:0 "Crush Left Wing Protesters"
@@ -5069,14 +5071,33 @@ ROM_king_carols_reign:0 "King Carols Reign"
 ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, King Carol, had lead us well so far. With his great wisdom, Romania has gone from a rumpt puppet state of the Ottoman Turks to a strong and independent nation. With his guiding hand, Romania will continue to propser in the 20th century!"
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
 ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, lets draft a major land reform bill."
+ROM_law_on_southern_dobruja:0 "Law on Southern Dobruja"
+ROM_law_on_southern_dobruja_desc:0 ""
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
+ROM_negotiations_for_bukovina_desc:0 ""
 ROM_support_from_germany:0 "Krupp Weapons"
+ROM_support_from_germany_desc:0 ""
+ROM_french_industrial_support:0 "French Industrial Support"
+ROM_french_industrial_support_desc:0 ""
+ROM_increase_french_weapon_purchases:0 "Increase French Weapon Purchases"
+ROM_increase_french_weapon_purchases_desc:0 ""
+ROM_welcome_anglo_italian_banks:0 "Welcome Anglo-Italian Banks"
+ROM_welcome_anglo_italian_banks_desc:0 ""
 ROM_center_consensus:0 "The Consensus of The Center"
 ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has hurt Romania greatly. The PND were appointed by the king for a reason: to bring a uniting, moderate government into power that the majority of Romanians can get behind."
+
+ROM_romanian_army:0 "The Romanian Army"
+ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
 ROM_lessons_from_prussian:0 "Lessons from the Prussians"
-ROM_french_russian_attache:0 "French-Russian attache"
-ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan wars" 
-ROM_minimum_wage_law:0 "Pass a minimum wage law"
+ROM_lessons_from_prussian_desc:0 ""
+ROM_french_russian_attache:0 "Franco-Russian Attaché"
+ROM_french_russian_attache_desc:0 ""
+ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan Wars"
+ROM_lessons_from_balkan_wars_desc:0 "" 
+ROM_adapt_to_the_times:0 "Adapt to the Times"
+ROM_adapt_to_the_times_desc:0 ""
+
+ROM_minimum_wage_law:0 "Minimum Wage Law"
 ROM_anti_corruption_campaign:0 "Anti-corruption campaign"
 ROM_halve_parliments_size:0 "Halve Parliaments Size"
 ROM_halve_parliments_size_desc:0 "Romanias parliament is much too bloated and powerful. To reduce parliaments power, we should reduce their size in half and draw new boundries favoring conservative politicians."
@@ -5084,7 +5105,10 @@ ROM_law_and_order:0 "A Stable Government"
 ROM_law_and_order_desc:0 "The kings number 1 priority above all is clearly a stable government. While the king may disagree with our anti democratic policies, if we can promise the king a stable hand during the dangerous times the world is facing as of now then he may be inclined to accept our rule, for now."
 ROM_agrarianists_in_power:0 "The Agrarianist Canidate"
 ROM_agrarianists_in_power_desc:0 "The fall of Carps corrupt government has lead to the king appointing Titu Maiorescu as prime minister. Maiorescu is apart of the 'Agrarianist' faction of the PC, which prioritizes fiscal responsibility, social conservatism, and as one would expect, rural issues such as education and land reform."
-ROM_for_country_side:0 "For The Country Side"
+ROM_for_country_side:0 "For the Country Side"
+ROM_for_country_side_desc:0 ""
+ROM_investments_in_rural_education:0 "Investments in Rural Education"
+ROM_investments_in_rural_education_desc:0 ""
 #events 
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
@@ -5191,6 +5215,7 @@ ROM_influence_of_the_church:0 "Influence of the Church"
 ROM_corruption_purges:0 "Corruption purges"
 ROM_balance_budget:0 "Budget Balancing"
 ROM_blue_law_overturned:0 "Overturned Blue Law"
+ROM_welcome_anglo_italian_banks_idea:0 "Anglo-Italian Banks"
 
 #Traits
 
@@ -5207,14 +5232,18 @@ member_of_PND:0 "member of PND"
 ROM_the_kings_government:0 "The Kings Government"
 ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
 ROM_romanian_army_idea:0 "Romanian Army"
-modify_rom_army:0 "Modify '§YRomanian Army§!' by:\nArmy Experience Gain: §G+0.03§!"
-ROM_army_org:0 "Modify '§YRomanian Army§!' by:\nArmy Organisation Regain: §G+5.00%§!\nArmy Organisation: §G+5.00%§!"
-ROM_speed:0 "Modify '§YRomanian Army§!' by:\nArmy Speed: §G+5.00%§!"
- member_of_pc:0 "Member of §cPC§!"
- member_of_pnl:0 "Member of §mPNL§!"
- member_of_psdr:0 "Member of §rPSDR§!"
- member_of_pnd:0  "Member of §qPND§!"
- ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§! will be available"
+modify_rom_army:0 "Modify '§YRomanian Army§!' by:\n£army_experience Army Experience Gain: §G+0.03§!"
+ROM_army_org:0 "Modify '§YRomanian Army§!' by:\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!"
+ROM_speed:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
+ROM_adapt_to_times.tt:0 "Modify '§YRomanian Army§!' by:\n£attacker_speed_texticon Divisions Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
+member_of_pc:0 "Member of §cPC§!"
+member_of_pnl:0 "Member of §mPNL§!"
+member_of_psdr:0 "Member of §rPSDR§!"
+member_of_pnd:0  "Member of §qPND§!"
+ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§! will be available"
+ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects from this §Yfocus§! will be §RRemoved§!."
+ROM_french_support_withdraw.tt:0 "If we go to war with §YFrance§! the effects from this §Yfocus§! will be §RRemoved§!."
+ROM_british_support_withdraw.tt:0 "If we go to war with §YBritain§! the effects from this §Yfocus§! will be §RRemoved§!."
 
 
 
