--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5098,7 +5098,7 @@ ROM_adapt_to_the_times:0 "Adapt to the Times"
 ROM_adapt_to_the_times_desc:0 ""
 
 ROM_minimum_wage_law:0 "Minimum Wage Law"
-ROM_anti_corruption_campaign:0 "Anti-corruption campaign"
+ROM_anti_corruption_campaign:0 "Anti-Corruption Campaign"
 ROM_halve_parliments_size:0 "Halve Parliaments Size"
 ROM_halve_parliments_size_desc:0 "Romanias parliament is much too bloated and powerful. To reduce parliaments power, we should reduce their size in half and draw new boundries favoring conservative politicians."
 ROM_law_and_order:0 "A Stable Government"
