More Saudi Events

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -13326,7 +13326,7 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_fiume.6.c: "Just end them, damn it!"
 
  # Nejd
- SAU_urbans_cracked: "The Urban Population will be Pacified"
+ SAU_urbans_cracked: "The Hadar Population will be Pacified"
  SAU_tribes_pacified: "Tribes will be Pacified"
  ww1_nejd.1.t: "[FROM.GetName] demands subjugation!"
  ww1_nejd.1.d: "The Emirate of Nejd, led by Abdulaziz Al Saud, has put forth a bold demand for our annexation, asserting their role as the primary driving force behind the unification of the Arabian Peninsula."
@@ -13506,20 +13506,42 @@ gre_we_shall_not_perish: "We Shall Not Perish"
  ww1_nejd.50.a: "Wipe them out"
 
  ww1_nejd.51.t: "Al Araif defeated"
- ww1_nejd.51.d: "After resolving matters with Sharif Hussein, the might of the Saudi army was sent to Al-Hariq to subdue the Araif and destroy them. They succeeded, killing every Hazzani rebel. Most of the Araif escaped to Ottoman territory, and only Saud bin Abdullah surrendered."
+ ww1_nejd.51.d: "After resolving matters with Sharif Hussein and finishing business with Ibn Himayd, the might of the Saudi army was sent to Al-Hariq to subdue the Araif and destroy them. They succeeded, killing every Hazzani rebel. Most of the Araif escaped to Ottoman territory, and only Saud bin Abdullah surrendered."
  ww1_nejd.51.a: "Mission Accomplished"
 
  ww1_nejd.52.t: "Ibn Saud Relinquishs Oman"
  ww1_nejd.52.d: "Abdulaziz Al Saud, Emir of Riyadh, abandoned his claims over Oman following a meeting with British agents in Kuwait. This gesture was aimed at securing British support for his ambitions to expand into Ottoman-held territories."
  ww1_nejd.52.a: "Ashat Oman"
 
- ww1_nejd.53.t: "Kuwaiti Troops move ontu Muntafiq"
- ww1_nejd.53.d: "In April, the Emir of Kuwait sought our assistance to invade the Muntafiq Territory. Responding to his request, we deployed a contingent of troops to join forces with Kuwait and Saudi Arabia in a joint military operation aimed at reclaiming the lands governed by Al Sadoon Pasha."
- ww1_nejd.53.a: "..."
+ ww1_nejd.53.t: "Muntafiq Troops move ontu Kuwait"
+ ww1_nejd.53.d: "The Emir of Kuwait, Mubarak, asks the Saudi State to help him defeat the Ottoman-Muntafiq invading force led by Sadoon Pasha. They are probably attacking Mubarak to scare or weaken him, but he still asks for our help."
+ ww1_nejd.53.a: "sure we will see"
 
- ww1_nejd.54.t: "Al Sadoon rebel the Invaders"
- ww1_nejd.54.d: "Sadoon Pasha successfully repelled the invading force and seized the spoils they abandoned during their retreat."
+ ww1_nejd.54.t: "Battle of Hadyah"
+ ww1_nejd.54.d: "Abdulaziz and the Saudi troops, who were supposed to help Kuwait, instead went to attack the Mutair tribe for their assault on the Qahtan tribe. Sadoon Pasha met with Mubarak, urging him to lead the Kuwaiti forces himself instead of his son. Mubarak refused, and after many Kuwaiti fighters were killed, Sadoon Pasha successfully defeated the Kuwaiti force near Hadyah in northern Kuwait and seized the spoils they abandoned during their retreat."
  ww1_nejd.54.a: "..."
+
+ ww1_nejd.55.t: "Ikhwan wants to build Settlement"
+ ww1_nejd.55.d: "The Ikhwan, a group of settled Bedouins who formed militias called the Ikhwan man ta'a Allah (Brotherhood of the Ones Who Obey God), primarily adhere to the Wahhabi sect and belong to the Mutair tribe. They are loyal to Al Saud and have now established their first settlement in Al-Artawiyah, north of Riyadh. This settlement, known as a Hijrah, was built with the purpose of worship and living close to resources. They petitioned Ibn Saud for permission to establish it."
+ ww1_nejd.55.a: "Sure people that I don't know"
+ ww1_nejd.56.t: "Al-Artawiyah Finished"
+ ww1_nejd.56.d: "The Ikhwani settlement of Al-Artawiyah has finally been completed and populated by Ikhwan members and their families, although their leadership still wanders the desert."
+ ww1_nejd.56.a: "Great"
+ ww1_nejd.57.t: "Al-Duwish moves into Al-Artawiyah"
+ ww1_nejd.57.d: "Finally, the Mutair tribe and Ikhwan leadership have settled in Al-Artawiyah. The Ikhwani settlement, completed and populated by Ikhwan members and their families years ago. Though their leadership had previously wandered the desert, they have now found a permanent home in Al-Artawiyah."
+ ww1_nejd.57.a: "Great!"
+ ww1_nejd.58.t: "Umm Al-Qura Established"
+ ww1_nejd.58.d: "Finally, after years without an official newspaper to gather and spread news within the Saudi domain, a new newspaper will be published every week, bearing royal decrees and news it is called Umm Al-Qura (Mother of Villages, also nickname of Mecca). It will also have a section dedicated to spreading the teachings of Wahhabism. The founding editor-in-chief of the paper is Yusuf Yasin. It was established as a replacement to the Al-Qibla newspaper, the official newspaper of the Hashemite dynasty that most of it is articles and preambles was written by Sharif Hussien, and as a response to the Egyptian Al Muqattam newspaper, which criticizes Ibn Saud."
+ ww1_nejd.58.a: "Great!"
+ ww1_nejd.59.t: "Battle of Qidam"
+ ww1_nejd.59.d: "Abdulaziz, along with the Subay Al Aridh and Al-Suhul tribes, fought against the Sufran clan of the Ajman tribe, led by Shaykh Khumis ibn Munaykhir. The Al-Sufran clan, the strongest and most independent clan of the Ajman tribe, only accepted leadership from the Al-Munaykhir family. There is a longstanding rivalry between the Hithlayn family, the shaykhs of the Al-Ajman tribe loyal to Abdulaziz, and the Al-Munaykhir family. During the battle, Abdulaziz and his allies defeated the Sufran clan and seized their camels. The purpose of the raid was to demonstrate Abdulaziz's power to the entire Al-Ajman tribe."
+ ww1_nejd.59.a: "wow more camels"
+ ww1_nejd.60.t: "Ibn Himayd refuses to pay the fifth"
+ ww1_nejd.60.d: "Shaykh Muhammad ibn Hindi ibn Himayd who had previously allied with Abdulaziz against the Bani Abdullah faction of the Mutayr tribe, failed to pay the fifth of the booty to Abdulaziz, which is his legal right as a leader under Islamic law."
+ ww1_nejd.60.a: "Ibn Saud for the win"
+ ww1_nejd.61.t: "Battle of Abu-Dakhan"
+ ww1_nejd.61.d: "Subay Al-Aridh tribe and Al-Suhul tribe fought alongside Abdulaziz in  Abu Dakhan. This conflict occurred in the territory of the Utaybah tribe targeting their Shaykh Ibn Himayd. During the battle, Abdulaziz's horse was injured, and warriors from the Bani Umar faction of the Subay Al-Aridh tribe, riding their horses known as Al-Ihayat, came to his rescue. They surrounded him and protected him from the Utaybi fighters. Despite initial aggression, Abdulaziz and his allies from Subay Al-Aridh were defeated by the Utaybah tribe near Al-Sha'ra.\n Following this defeat, 'Abdul-'Aziz and his loyal allies retreated to Riyadh. Despite this setback, they remained determined and sought another opportunity to demonstrate their strength and superiority over their adversaries."
+ ww1_nejd.61.a: "..."
  # AZERBAIJAN
  ww1_azerbaijan.1.t: "Baku Commune"
  ww1_azerbaijan.1.d: "Bolshevik and Left Socialist Revolutionary (SR) established the commune in the city of Baku. It came to power after the bloody confrontation with the Muslim population, known as the [GetMonth] Days in Baku."
