--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8519,6 +8519,10 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  SAU_Foreign_relations: "Foreign Relations Department"
  SAU_WWI_Rashidi_conflict_category: "Second Saudi-Rashidi War"
  SAU_WWI_Rashidi_conflict_category_desc: "For decades, the houses of Saud and Rashid have been engaged in longstanding conflict and warfare. As the Ottomans are occupied with the demands of the so-called Great War, the opportunity presents itself for Al Saud to decisively confront and overcome Al Rashid in this ongoing struggle for dominance in the Arabian Peninsula. With regional dynamics shifting amidst global turmoil, Abdulaziz Al Saud aims to consolidate his authority and extend his influence, marking a significant turning point in the historical rivalry between these powerful Arabian clans"
+ SAU_attack_hail: "Attack Ha'il"
+ SAU_attack_hail_flag: "Attacking Ha'il"
+ JBS_attack_qassim: "Attack Qassim"
+ JBS_attack_qassim_flag: "Attacking Qassim"
  SAU_Egyptian_adv_tt: "Unlocks §YEgyptian§! Advisors."
  SAU_Iraqi_adv_tt: "Unlocks §YIraqi§! Advisors."
  SAU_Syrian_adv_tt: "Unlocks §YSyrian§! Advisors."
@@ -9135,7 +9139,7 @@ FRA_MOR_create_colonial_division:0 "Create a Division with §Y4 Infantry Batalli
  Big_Saud_low: "Low Reformist Support"
  SAU_Ikhwan_revolt_mission: "Ikhwani Revolt"
  SAU_Abdulrahman_returns: "Return of Abdulrahman"
- SAU_support_urban_merchants: "Support Urban Merchants"
+ SAU_support_urban_merchants: "Support Hadar Nejd" #حضر نجد
  SAU_recruit_city_fighters: "Recruit City Fighters"
  SAU_free_slaves: "Free Slaves"
  SAU_rally_allies: "Rally Reformists"
