--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10753,6 +10753,8 @@ nationalist_leave_coalition:0 "The §LNationalists§! leave our §YCoalition§!,
  SAU_repeal_darin_desc: ""
  SAU_ask_for_baghdadi_donations: "Baghdadi Donations"
  SAU_ask_for_baghdadi_donations_desc: ""
+ SAU_confedration_of_arabia: "Confedration of Arabia"
+ SAU_confedration_of_arabia_desc: ""
  SAU_Attack_Rashidis: "Cross the Border"
  SAU_Attack_Rashidis_desc: ""
  SAU_repeal_anti_shia_laws: "Loosen on Shias"
