--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5001,7 +5001,15 @@ ROM_we_happy_few:0 "We Happy Few"
 ROM_we_happy_few_desc:0 "Is it not the landlords who make up some of the richest in Romania? Angering them further won't do us any good, and we should instead reach out to landlords and offer them some input on our future domestic legislation"
 ROM_further_land_reform:0 "Tackling the Land Reform Issue"
 arm_twister:0 "Arm Twister"
+ROM_the_workers_party:0 "The Workers Party"
+ROM_the_workers_party_desc:0 "Let it be known! The strongest supporter of workers interests is the PNL! We must continue our progress with previous reforms, and regulate the maxiumum hours Romanians are allowed to work."
+ROM_minimum_wage_law_idea:0 "Minimum Wage"
+ROM_reduced_working_week:0 "Reduced Working Week"
 ROM_liberal_government:0 "the §lPNL§! is in power"
+ROM_economic_protectionalism:0 "Romania First!"
+ROM_a_nation_of_peasants:0 "A Nation of Farmers"
+ROM_a_nation_of_peasants_desc:0 "The farmers of Romania are the backbone of the entire nation. Without them, how would we eat? Being a part of such a crucial demographic, its key that we reward them. We shall pass new regulations on land lords"
+ROM_economic_protectionalism_desc:0 "Romanias farmers and workers should come before all else. We need to raise tariffs on foreign goods to ensure our local producers can compete with foreign goods which have flooded our market as of late."
 ROM_undemocratic_methods:0 "Undemocratic Methods for a Democratic Policy"
 ROM_undemocratic_methods_desc:0 "The PNL is a somewhat divided party, with factions who support and oppose different levels of liberal reform. We really cannot waste our time and political capital on getting everyone onboard with the plan, and thus we must make use of loopholes to pass some of our agenda. The ends will justify the means in this case."
 ROM_further_land_reform_desc:0 "The Romanian people expect further land reform from us. We must deliver, and thus will reach out to all sides of the political isle to come up with a moderate bill everyone can agree upon."
