--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5117,6 +5117,7 @@ ROM_for_country_side:0 "For the Country Side"
 ROM_for_country_side_desc:0 ""
 ROM_investments_in_rural_education:0 "Investments in Rural Education"
 ROM_investments_in_rural_education_desc:0 ""
+ROM_our_rural_base:0 "Our rural base"
 #events 
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
@@ -5230,11 +5231,10 @@ ROM_welcome_anglo_italian_banks_idea:0 "Anglo-Italian Banks"
 scholarly_statesman:0 "Scholarly Statesman"
 modernizer:0 "Modernizer"
 diplomatic_stabilizer:0 "Diplomatic stabilizer"
-member_of_PC:0 "Member of PC"
-member_of_PNL:0 "Member of PNL"
-member_of_PSDR:0 "Member of PSDR"
-member_of_PND:0 "member of PND"
-
+member_of_PC:0 "Member of §cPC§!"
+member_of_PNL:0 "Member of §mPNL§!"
+member_of_PSDR:0 "Member of §rPSDR§!"
+member_of_PND:0 "member of §qPND§!"
  
  #custom tooltips
 ROM_the_kings_government:0 "The Kings Government"
@@ -5252,6 +5252,7 @@ ROM_show_advisor:0 "All §YPolitical Advisors§! from the §mPNL§! and §cPC§!
 ROM_german_support_withdraw.tt:0 "If we go to war with §YGermany§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_french_support_withdraw.tt:0 "If we go to war with §YFrance§! the effects from this §Yfocus§! will be §RRemoved§!."
 ROM_british_support_withdraw.tt:0 "If we go to war with §YBritain§! the effects from this §Yfocus§! will be §RRemoved§!."
+ROM_democracy_tt:0 "Having §YDmitrie Sturdza§! as an advisor will increase this focus by §G5%§! democracy support §G5%§! stability and §Y50§! political power"
 
 
 
