RAJ Flavor Event Up To 1914 UPDATE

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -9414,6 +9414,53 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_flavor_raj.4.d:0 "Bharoto Bhagyo Bidhata, ''dispenser of India's destiny'', is a five stanza Brahmo poem in Bengali written by Rabindranath Tagore. It was sung for the first time today on the second day of the annual session of the Indian National Congress in Kolkata. The poem was performed by Sarala Devi Chowdhurani, Tagore's niece, along with a group of school children in front of prominent Congress leaders including Bishan Narayan Dhar, president of the Indian National Congress, and Ambika Charan Majumdar."
  ww1_flavor_raj.4.a:0 "Beautiful."
 
+ # 1912
+
+ ww1_flavor_raj.5.t:0 "Lala Har Dayal write ''Marx: A Modern Rishi''"
+ ww1_flavor_raj.5.d:0 "Today, Lala Har Dayal wrote ''Marx: A Modern Rishi''. The article, which is believed to be the first Indian piece to delve into the theories of Karl Marx, offers a unique perspective by drawing parallels between Marx's philosophies and the ancient wisdom of Indian rishis (Sages). Har Dayal, known for his radical views and activism, explores how Marx’s critique of capitalism and vision for a classless society resonate with the teachings of ancient Indian philosophers. He argues that Marx's emphasis on social justice and economic equality aligns with the ethical and moral values espoused by India's spiritual leaders."
+ ww1_flavor_raj.5.a:0 "Crackhead."
+
+ ww1_flavor_raj.6.t:0 "Foundation of Baranagore Ramakrishna Mission Ashrama High School"
+ ww1_flavor_raj.6.d:0 "The serene locality of Baranagar witnessed a significant addition to its educational landscape today with the inauguration of the Baranagore Ramakrishna Mission Ashrama High School. This senior secondary boys' school aims to provide a robust and holistic education to its students, inspired by the teachings and ideals of Sri Ramakrishna Paramahamsa and Swami Vivekananda."
+ ww1_flavor_raj.6.a:0 "Kya aapane sachamuch isaka anuvaad kiya hai?"
+
+ ww1_flavor_raj.7.t:0 "India National Conference"
+ ww1_flavor_raj.7.d:0 "Today the Indian National Conference, a missionary conference, has convened in Calcutta. The main aim of this 4-day conference is to decide whether India needs better available Christian literature. In order to answer this question, the conference has set up a committee whose goal it is to propose a series of books which embrace Christian principles."
+ ww1_flavor_raj.7.a:0 "This is certainly goud for India's Christian population."
+
+ ww1_flavor_raj.8.t:0 "Malankara Orthodox-Jacobite Church Dispute"
+ ww1_flavor_raj.8.d:0 "A schism within the Malankara Syrian Church has led to an ongoing series of ecclesiastical disputes in Kerala. The dispute, now known by various names (Malankara Orthodox-Jacobite Church Dispute, the Schism of 1912, the Second Community Case or even the Second Vattippana Case), has been intertwined with continuous litigation and has resulted in the formation of two rival ecclesiastical bodies, namely the autocephalous Malankara Orthodox Syrian Church and the Malankara Jacobite Syrian Orthodox Church, an autonomous church under the Syriac Orthodox Patriarchate of Antioch."
+ ww1_flavor_raj.8.a:0 "Let's hope this will soon blow off."
+ RAJ_it_fucking_continues:0 "\n§YMore than a century later, this dispute is still very much alive.§!"
+
+ ww1_flavor_raj.9.t:0 "First Indian Anglican Bishop"
+ ww1_flavor_raj.9.d:0 "India has received its first Indian Anglican Bishop today. Vedanayakam Samuel Azariah, born in 1874, son of an Indian clergyman and educated at Madras Christian College, will be consecrated as the first Indian Anglican bishop in St Paul's Cathedral, Calcutta. There are already 11 British Anglican bishops in India and the Governor of Bengal. In ten days' time Azariah will take up his post in the newly created diocese of Dornakal."
+ ww1_flavor_raj.9.a:0 "It almost feels like there is more Christian related news in India than Hindu related ones!"
+
+ # 1913
+
+ ww1_flavor_raj.10.t:0 "Raja Harischandra"
+ ww1_flavor_raj.10.d:0 "Today, the movie ''Raja Harishchandra'' premiered, holding the esteemed title of being India's first full-length feature film. Directed and produced by Dadasaheb Phalke, this silent film is based on the legendary Indian tale of King Harishchandra, celebrated for his unwavering commitment to truth and integrity. The plot unfolds as the king faces a series of trials and tribulations, including losing his kingdom, wealth, and family, to uphold his promise and truth. His steadfastness is ultimately rewarded by the gods, restoring his lost kingdom and family, symbolizing the triumph of virtue over adversity."
+ ww1_flavor_raj.10.a:0 "Are they trying to replicate Hollywood? And what are they gonna call it, huh? ''Bollywood''?"
+
+ ww1_flavor_raj.11.t:0 "Rabindranath Tagore Win the Nobel Prize"
+ ww1_flavor_raj.11.d:0 "Rabindranath Tagore, writer of Bharoto Bhagyo Bidhata, ''dispenser of India's destiny'', has won the Nobel Prize in Literature. The Swedish Academy appreciated the idealistic—and for Westerners—accessible nature of a small body of his translated material focused on the 1912 Gitanjali: ''Song Offerings''."
+ ww1_flavor_raj.11.a:0 "A shining example of Indian identity."
+ 
+ ww1_flavor_raj.12.t:0 "Mangarh Massacre"
+ ww1_flavor_raj.12.d:0 "Govindgiri Banjara, a social and religious reformer among the Adivasi tribe of Gujarat, had come into conflict with the local princely state rulers, particularly those of Sunth, Banswara, Idar and Dungarpur, because of his criticism of the Indian hierarchy, its exploitation of the Adivasis and the subsequent social disruption caused by his followers.\n\nFleeing an attempt by the ruler of the state of Idar to capture Govindgiri, he and his followers took up a defensive position on a hilltop in the Mangarh Hills on the border of the princely states of Banswara and Sunth. Over the next few days, his followers launched a series of attacks, particularly on the police outpost at Gadhran, the Parbatgadh fort in Sunth, and generally on local villages in both Sunth and Banswara. Police were sent to break up the meeting, but negotiations failed. The Indian princes then sought a military solution, units of the Imperial Service Troops and the Mewar Bhil Corps laid siege to the hill, and on 12 November Govindgiri and his deputy Punja Pargi sent a delegation to the British with a list of grievances, but no negotiations took place. However, the commanding officer gave the delegation an ultimatum, disband by 15 November. The Bhil stood their ground and stayed. On 17 November, Indian and British forces attacked the Bhil defences and captured Govindgiri Banjara and his deputy Punja Pargi, as well as 900 prisoners."
+ ww1_flavor_raj.12.a:0 "A charismatic fool is still a fool."
+
+ # 1914
+
+ ww1_flavor_raj.13.t:0 "Barisal Conspiracy Case"
+ ww1_flavor_raj.13.d:0 "Last year, our colonial police uncovered several documents in the Barisal district in the south-eastern corner of Bengal. These documents implicated the Anushilan Samiti, a revolutionary organisation whose East Bengal wings were led by Trailokyanath Chakravarty and Pratul Chandra Ganguli. Among the documents seized was a proposal to seduce native troops and incite them to rebellion and massacre the British.\n\nThe trial of the 44 began in Calcutta in June 1913. The Crown prosecutor claimed to show evidence of how the conspirators had divided Bengal into several districts to preach sedition. The Samiti had targeted students and unmarried youths with meetings and services, and had hundreds of members in Barisal district alone.\n\nThe verdict was delivered today and of the original 44 accused, 32 were acquitted, pardoned or had the cases against them withdrawn. The remaining 12 pleaded guilty to the charge of conspiracy against the British Crown. Five of the 12 - including Pratul Chandra - were sentenced to long terms of transportation to the Andaman Islands, ranging from 10 to 12 years. The remaining seven convicts received transportation sentences of between two and seven years."
+ ww1_flavor_raj.13.a:0 "Ungratefuls"
+
+ ww1_flavor_raj.14.t:0 "Komagata Maru Incident"
+ ww1_flavor_raj.14.d:0 "Recently, the Komagata Maru, a Japanese steamship, sailed from British Hong Kong via Shanghai, China and Yokohama, Japan to Vancouver, British Columbia, Canada, arriving on 4 April. However, a group of 376 people from British India, comprising 337 Sikhs, 27 Muslims and 12 Hindus, all from the Punjab, attempted to immigrate to Canada via the Komagata Maru. While 24 were admitted to Canada, the other 352 were not allowed to disembark due to the Continuous Journey Regulation, which prohibits the admission to Canada of those who ''arrive from the country of their birth or nationality by means of a continuous journey and/or tickets purchased before leaving the country of their birth or nationality''. The ship was forced to leave Canadian waters, escorted by HMCS Rainbow, one of Canada's first two naval vessels, and the remaining travellers were forced to return to Budge Budge, near Calcutta. There the Indian Imperial Police attempted to arrest the group's leaders, which prompted a riot, and the crowd was subsequently fired upon by the police, resulting in some deaths."
+ ww1_flavor_raj.14.a:0 "Hopefully this will be the worst thing to happen this year!"
+
  # Focus #
 
  ww1_raj.1.t:0 "The Earl of Minto Resigns."
@@ -9472,10 +9519,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.13.a:0 "Enough to make a grown man cry."
  RAJ_buck_fucking_dies:0 "§YEdward Charles Buck§! dies. You are sad."
 
- ww1_raj.14.t:0 "Komagata Maru Incident"
- ww1_raj.14.d:0 "PLACEHOLDER"
- ww1_raj.14.a:0 "They violated the exclusion laws after all."
-
  ww1_raj.15.t:0 "All-India Hindu Grand Assembly Formed"
  ww1_raj.15.d:0 "PLACEHOLDER"
  ww1_raj.15.a:0 "Another group of fanatics."
@@ -9510,18 +9553,13 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_raj.22.d:0 "PLACEHOLDER"
  ww1_raj.22.a:0 "Let's hope they've learned their lesson."
 
- ww1_raj.24.t:0 "Malankara Orthodox-Jacobite Church Dispute"
- ww1_raj.24.d:0 "A schism within the Malankara Syrian Church has led to an ongoing series of ecclesiastical disputes in Kerala, India. The dispute, now known by various names (Malankara Orthodox-Jacobite Church Dispute, the Schism of 1912, the Second Community Case or even the Second Vattippana Case), has been intertwined with continuous litigation and has resulted in the formation of two rival ecclesiastical bodies, namely the autocephalous Malankara Orthodox Syrian Church and the Malankara Jacobite Syrian Orthodox Church, an autonomous church under the Syriac Orthodox Patriarchate of Antioch."
- ww1_raj.24.a:0 "Let's hope this will soon blow off."
- RAJ_it_fucking_continues:0 "§YMore than a century later, this conflict is still very much alive.§!"
+ ww1_raj.23.t:0 "George V Adress the Parliament"
+ ww1_raj.23.d:0 "Today, King George V addressed the British Parliament, reflecting on his recent tour of the imperial colonies, including his visit to India a few months ago. In his speech, he expressed his admiration for the loyalty and progress he had witnessed among the Indian people and government. This speech came shortly after the great Delhi Durbar, where he and Queen Mary were proclaimed Emperor and Empress of India, and a new series of reforms for India were announced."
+ ww1_raj.23.a:0 "The Raj shall live a thousand years."
 
- ww1_raj.25.t:0 "Mangarh Massacre"
- ww1_raj.25.d:0 "PLACEHOLDER"
- ww1_raj.25.a:0 "The beginning of a trend?"
-
- ww1_raj.26.t:0 "Barisal Conspiracy Case"
- ww1_raj.26.d:0 "PLACEHOLDER"
- ww1_raj.26.a:0 "Luckily they were stopped before any disaster."
+ ww1_raj.24.t:0 "Muslim Indian Doctors Sent to the Red Crescent"
+ ww1_raj.24.d:0 "With the recent outbreak of the Balkan War, pitting the Balkan League of Greece, Bulgaria and Serbia against the Ottoman Empire, a number of Muslim Indian doctors and nurses have been dispatched under the banner of the Red Crescent to provide vital medical assistance to Turkish troops engaged in the ongoing conflict. While this is a remarkable display of international solidarity and faith, it has left many of our Muslim majority regions lacking in medical coverage."
+ ww1_raj.24.a:0 "Even India is influenced by the Balkans now!"
 
  ww1_raj.27.t:0 "Assasination Attempt Against Viceroy Charles Hardinge"
  ww1_raj.27.d:0 "The Viceroy and the Vicerine were riding on an elephant, making their ceremonial entry into the capital of India, when 17-year-old Basanta Kumar Biswas, a revolutionary from the village of Nadia, threw a homemade bomb at the Viceroy. Although the umbrella-bearer was killed, the Vicerine and the elephant remained unscathed. Lord Hardinge, however, was injured by shrapnel over his back, legs and head, and the flesh on his shoulders was torn into strips. There was some difficulty in removing the Viceroy from the back of the elephant on which they were travelling, and our doctors are still uncertain regarding the Viceroy's fate."
